[tool.poetry]
name = "atac"
version = "0.1.0"
description = ""
authors = ["Your Name <lordef01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
aiohttp = "^3.11.18"
gtfs-realtime-bindings = "^1.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
